noinst_LIBRARIES = libisz.a
libisz_a_SOURCES =\
isz/function/mprintf.c\
isz/function/grid.c\
isz/it/grid_line.c\
isz/it/grid_field.c\
isz/it/it.c\
isz/it/list.c\
isz/it/node.c\
isz/it/text.c\
isz/it/text_canvas.c\
isz/fail/details/errno.c\
isz/fail/details/no_i.c\
isz/fail/fail.c\
isz/i/grid_line.c\
isz/i/keeper.c\
isz/i/id.c\
isz/i/fail_details.c\
isz/i/str.c\
isz/i/sequence.c\
isz/i/str_owner.c\
isz/i/size.c\
isz/i/grid_field.c\
isz/i/row_cursor.c\
isz/i/text_canvas.c\
isz/i/dump.c
